--- a/widget/assets/css/widget.app.css
+++ b/widget/assets/css/widget.app.css
@@ -669,7 +669,6 @@ videogular, [videogular] {
 .list-layout span.list-item-date{
 	font-size:11px;
 	font-style:italic;
-	display:block;
 	margin:-4px 0 -4px;
 }
 .layout3 .list-layout{
@@ -1073,3 +1072,62 @@ input[type=range]::-ms-track {
 	-webkit-line-clamp: 2;
 	-webkit-box-orient: vertical;  
 }
+
+.lds-ring-small {
+	position: relative;
+	width: 20px;
+	height: 20px;
+	float: right;
+	top: 5px;
+  }
+  .lds-ring-small div {
+    box-sizing: border-box;
+    display: block;
+    position: absolute;
+    width: 14px;
+    height: 14px;
+    margin: 0px;
+    border: 3px solid var(--bf-theme-primary);
+    border-radius: 50%;
+    animation: lds-ring-small 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
+    border-color: var(--bf-theme-primary) transparent transparent transparent;
+  }
+  .lds-ring-small div:nth-child(1) {
+	animation-delay: -0.45s;
+  }
+  .lds-ring-small div:nth-child(2) {
+	animation-delay: -0.3s;
+  }
+  .lds-ring-small div:nth-child(3) {
+	animation-delay: -0.15s;
+  }
+  @keyframes lds-ring-small {
+	0% {
+	  transform: rotate(0deg);
+	}
+	100% {
+	  transform: rotate(360deg);
+	}
+  }
+
+.loader {
+	border: 3px solid transparent;
+	border-radius: 50%;
+	border-top: 3px solid var(--bf-theme-primary);
+	width: 15px;
+	height: 15px;
+	-webkit-animation: spin 2s linear infinite; /* Safari */
+	animation: spin 2s linear infinite;
+	float: right;
+  }
+  
+  /* Safari */
+  @-webkit-keyframes spin {
+	0% { -webkit-transform: rotate(0deg); }
+	100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+	0% { transform: rotate(0deg); }
+	100% { transform: rotate(360deg); }
+  }
