--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -1,43 +1,52 @@
 <div class="holder padding-zero list-layout-3" ng-class="{'pb75': globalPlaylist}">
     <div class="media-center-plugin layout3 list-3 text-overlay">
         <div class="plugin-banner clearfix text-overlay">
-            <div ng-style="WidgetHome.data.content.images.length > 0 ? {'min-height': (9 * deviceWidth / 16) + 'px' } : {}" id="carousel" build-fire-carousel=""></div>
+            <div ng-style="WidgetHome.data.content.images.length > 0 ? {'min-height': (9 * deviceWidth / 16) + 'px' } : {}"
+                id="carousel" build-fire-carousel=""></div>
         </div>
         <div class="padded text-left text-overlay wysiwyg" ng-if="WidgetHome.showDescription()">
-            <p class="margin-bottom-zero"
-            ng-bind-html="WidgetHome.media.data.content.descriptionHTML | safeHtml">
+            <p class="margin-bottom-zero" ng-bind-html="WidgetHome.media.data.content.descriptionHTML | safeHtml">
             </p>
         </div>
-        <div id="emptyContainer" class="padded" ng-if="!loadingData && (!WidgetHome.items || (WidgetHome.items && WidgetHome.items.length === 0))"></div>
-        <div infinite-scroll="WidgetHome.loadMore()"
-             infinite-scroll-distance="1"
-             data-infinite-container=".infinite-scroll-parent"
-             infinite-scroll-disabled="WidgetHome.noMore">
+        <div id="emptyContainer" class="padded"
+            ng-if="!loadingData && (!WidgetHome.items || (WidgetHome.items && WidgetHome.items.length === 0))"></div>
+        <div infinite-scroll="WidgetHome.loadMore()" infinite-scroll-distance="1"
+            data-infinite-container=".infinite-scroll-parent" infinite-scroll-disabled="WidgetHome.noMore">
             <div class="clickable text-overlay" ng-repeat="item in WidgetHome.items"
-                 ng-click="WidgetHome.goToMedia($index)">
+                ng-click="WidgetHome.goToMedia($index)">
                 <div class="plugin-banner clearfix text-overlay">
-                    <div class="text-overlay" play-btn="{{item.data.videoUrl.length > 0 || (skipMediaPage && (item.data.videoUrl.length > 0 || item.data.audioUrl.length > 0)) }}">
-                        <img ng-if="item.data.topImage" load-image="16x9" style="width:100%;" crop-width="340" crop-height="190" crop-type="crop" data-final-src="{{item.data.topImage}}">
-                        <img ng-if="!item.data.topImage" src="../../../styles/media/holder-16x9.png" style="width:100%;">
+                    <div class="text-overlay"
+                        play-btn="{{item.data.videoUrl.length > 0 || (skipMediaPage && (item.data.videoUrl.length > 0 || item.data.audioUrl.length > 0)) }}">
+                        <img ng-if="item.data.topImage" load-image="16x9" style="width:100%;" crop-width="340"
+                            crop-height="190" crop-type="crop" data-final-src="{{item.data.topImage}}">
+                        <img ng-if="!item.data.topImage" src="../../../styles/media/holder-16x9.png"
+                            style="width:100%;">
                     </div>
                 </div>
                 <div class="padded text-left text-overlay">
                     <div class="titleFlexBox">
-                      <p class="text-primary ellipsis margin-zero">
-                        <a class="text-primary">{{item.data.title}}</a>
-                      </p>
-                      <div class="action">
-                        <div class="li-actions-item">
-                            <i class="share glyphicon glyphicon-share-alt star" ng-if="allowShare" ng-click="WidgetHome.share($event, item)" role="button"></i>
+                        <p class="text-primary ellipsis margin-zero">
+                            <a class="text-primary">{{item.data.title}}</a>
+                        </p>
+                        <div class="action">
+                            <div class="li-actions-item">
+                                <!-- <i class="share glyphicon glyphicon-share-alt star" ng-if="allowShare" ng-click="WidgetHome.share($event, item)" role="button"></i>
                             <i class="glyphicon bookmark star" ng-class="{ 'glyphicon-star-empty' : !item.data.bookmarked, 'glyphicon-star' : item.data.bookmarked }" ng-click="WidgetHome.bookmark($event, item)" role="button"></i>
-                            <i ng-if="globalPlaylist" class="glyphicon star" style="font-size: 17px;top: 1px; margin-left: 20px;" ng-class="{ 'glyphicon-plus' : !isInGlobalPlaylist(item.id), 'glyphicon-minus' : isInGlobalPlaylist(item.id) }" ng-click="toggleGlobalPlaylistItem($event, item)" role="button"></i>
+                            <i ng-if="globalPlaylist" class="glyphicon star" style="font-size: 17px;top: 1px; margin-left: 20px;" ng-class="{ 'glyphicon-plus' : !isInGlobalPlaylist(item.id), 'glyphicon-minus' : isInGlobalPlaylist(item.id) }" ng-click="toggleGlobalPlaylistItem($event, item)" role="button"></i> -->
+                                <i class="glyphicon glyphicon-option-horizontal"
+                                    ng-click="WidgetHome.showDrawer($event, item)" role="button"></i>
+                            </div>
                         </div>
-                      </div>
                     </div>
                     <div class="summary">
                         <p class="margin-bottom-zero">{{item.data.summary}}</p>
                     </div>
-                    <span class="list-item-date" data-ng-if="item.data.mediaDate" style="font-size:11px; font-style:italic; margin-top:-4px;">{{item.data.mediaDate  | jsDate | date:"MMMM dd, yyyy"}}</span>
+                    <span class="list-item-date" data-ng-if="item.data.mediaDate"
+                        style="font-size:11px; font-style:italic; margin-top:-4px;">{{item.data.mediaDate | jsDate |
+                        date:"MMMM dd, yyyy"}}</span>
+                    <i data-ng-if="item.hasDownloadedMedia && WidgetHome.media.data.content.allowOfflineDownload"
+                        style="float: right; margin-top: 2px;" class="glyphicon glyphicon-ok-circle" role="button"></i>
+                        <div data-ng-if="currentlyDownloading.indexOf(item.id) > -1" class="lds-ring-small"><div></div><div></div><div></div><div></div></div>
                 </div>
             </div>
         </div>
