--- a/widget/templates/layouts/item-2.html
+++ b/widget/templates/layouts/item-2.html
@@ -20,6 +20,7 @@
                                     <div class="people-info text-center col-xs-12">
                                         <h5 class="ellipsis margin-top-fifteen whiteTheme" style="font-size: 16px;">
                                             {{WidgetMedia.item.data.title}}</h5>
+                                            <h5 data-ng-if="!WidgetMedia.data.hasDownloadedVideo" class="margin-bottom-zero whiteTheme">Downloaded</h5>
                                         <h5 class="margin-bottom-zero whiteTheme">
                                             {{WidgetMedia.item.data.summary}}</h5>
                                     </div>
